--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
    "source": [
     "import pandas as pd\n",
     "df = pd.read_csv('Yelp_Reviews.csv')\n",
-    "df.head()"
+    "df.head()\n"
    ]
   },
   {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -346,14 +346,15 @@
        "4  TlvV-xJhmh7LCwJYXkV-cg                  32  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df['Review_Word_Length'] = df.text.map(lambda x: len(x.split()))\n",
-    "df.head()"
+    "df.head()\n",
+    "#df.loc[df['Review_Word_Length']==58]['Review_Word_Length']"
    ]
   },
   {
@@ -365,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +381,7 @@
        "Name: stars, dtype: float64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1570,7 +1571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1586,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1634,7 +1635,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1653,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1942,7 +1943,7 @@
        "[5 rows x 331 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1980,7 +1981,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
